plugins {
	id 'org.springframework.boot' version '2.2.7.RELEASE'
	id 'io.spring.dependency-management' version '1.0.9.RELEASE'
	id 'java'
	id "io.freefair.lombok" version "5.0.1"
}

group = 'ru.peony'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = '14'

tasks.withType(JavaCompile).each {
	it.options.compilerArgs.add('--enable-preview')
}

repositories {
	mavenCentral()
	maven {
		url = "https://packages.atlassian.com/mvn/maven-public/"
	}
	maven {
		url = "https://packages.atlassian.com/mvn/maven-external/"
	}

}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-webflux'
	implementation 'org.slf4j:slf4j-api'
	implementation 'com.fasterxml.jackson.core:jackson-databind'
	implementation 'com.fasterxml.jackson.core:jackson-core'
	implementation 'org.eclipse.jetty:jetty-reactive-httpclient'
	implementation 'com.atlassian.jira:jira-rest-java-client-core:5.2.1'
	implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310'

	testImplementation('org.springframework.boot:spring-boot-starter-test') {
		exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
	}
	testImplementation 'io.projectreactor:reactor-test'
}

test {
	useJUnitPlatform()
}

bootRun {
	jvmArgs("--enable-preview")
}